[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/OptionsMenu.gd" type="Script" id=1]
[ext_resource path="res://sprites/backgrounds/score_background.png" type="Texture" id=2]
[ext_resource path="res://sprites/backgrounds/ui_transparency.png" type="Texture" id=3]
[ext_resource path="res://resources/fonts/GUIfontInfo.tres" type="DynamicFont" id=4]
[ext_resource path="res://resources/fonts/GUfontScoreI.tres" type="DynamicFont" id=5]
[ext_resource path="res://sprites/ui/bar_background.png" type="Texture" id=6]
[ext_resource path="res://sprites/ui/progress_ui.png" type="Texture" id=7]
[ext_resource path="res://sprites/ui/arrow_btn.png" type="Texture" id=8]
[ext_resource path="res://sprites/ui/quit_normal.png" type="Texture" id=9]
[ext_resource path="res://sprites/ui/quit_hover.png" type="Texture" id=10]

[node name="OptionsMenu" type="Node2D"]
z_index = 2
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
scale = Vector2( 1.247, 1.247 )
texture = ExtResource( 2 )
offset = Vector2( 512, 300 )

[node name="Transparency" type="Sprite" parent="."]
position = Vector2( 509.539, 587.757 )
scale = Vector2( 4.96758, 1.20252 )
texture = ExtResource( 3 )

[node name="Options" type="Label" parent="."]
margin_right = 1030.0
margin_bottom = 127.0
custom_fonts/font = ExtResource( 4 )
text = "OPTIONS"
align = 1

[node name="Audio" type="Label" parent="."]
margin_left = 11.0
margin_top = 196.0
margin_right = 1011.0
margin_bottom = 323.0
custom_fonts/font = ExtResource( 5 )
text = "AUDIO"

[node name="Music" type="Label" parent="."]
margin_left = 11.0
margin_top = 296.0
margin_right = 1011.0
margin_bottom = 423.0
custom_fonts/font = ExtResource( 5 )
text = "MUSIC"

[node name="Controls" type="Label" parent="."]
margin_left = 1.0
margin_top = 400.0
margin_right = 1027.0
margin_bottom = 527.0
custom_fonts/font = ExtResource( 5 )
text = "CONTROLS"
align = 1

[node name="ControlsTable" type="RichTextLabel" parent="."]
margin_left = 43.0
margin_top = 474.0
margin_right = 983.0
margin_bottom = 703.0
custom_fonts/normal_font = ExtResource( 5 )
bbcode_enabled = true
bbcode_text = "SHOOT - SPACE, CTRL, SHIFT, F
RIGHT - D, RKEY, 6
LEFT - A, LKEY, 4
CLIMB UP - W, UKEY, 8
CLIMB DOWN - S, DKEY, 2 "
text = "SHOOT - SPACE, CTRL, SHIFT, F
RIGHT - D, RKEY, 6
LEFT - A, LKEY, 4
CLIMB UP - W, UKEY, 8
CLIMB DOWN - S, DKEY, 2 "

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_left = 120.0
margin_top = 194.0
margin_right = 883.0
margin_bottom = 247.0
color = Color( 0.513726, 0.513726, 0.513726, 1 )

[node name="AudioBar" type="TextureProgress" parent="."]
editor/display_folded = true
margin_left = 169.632
margin_top = 189.092
margin_right = 932.632
margin_bottom = 259.092
value = 50.0
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 7 )

[node name="IncreaseBtn" type="TextureButton" parent="AudioBar"]
margin_left = 760.199
margin_top = -3.19377
margin_right = 840.199
margin_bottom = 76.8062
texture_normal = ExtResource( 8 )

[node name="DecreaseBtn" type="TextureButton" parent="AudioBar"]
margin_left = 4.19946
margin_top = -3.19377
margin_right = 84.1995
margin_bottom = 76.8062
rect_scale = Vector2( -1, 1 )
texture_normal = ExtResource( 8 )

[node name="MusicBar" type="TextureProgress" parent="."]
margin_left = 169.632
margin_top = 288.092
margin_right = 932.632
margin_bottom = 358.092
value = 50.0
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 7 )

[node name="IncreaseBtn" type="TextureButton" parent="MusicBar"]
margin_left = 760.199
margin_top = -3.19376
margin_right = 840.199
margin_bottom = 76.8062
texture_normal = ExtResource( 8 )

[node name="DecreaseBtn" type="TextureButton" parent="MusicBar"]
margin_left = 4.19946
margin_top = -3.19376
margin_right = 84.1995
margin_bottom = 76.8062
rect_scale = Vector2( -1, 1 )
texture_normal = ExtResource( 8 )

[node name="QuitBtn" type="TextureButton" parent="."]
margin_left = 4.86978
margin_top = 8.19112
margin_right = 233.87
margin_bottom = 177.191
rect_scale = Vector2( 0.4, 0.4 )
texture_normal = ExtResource( 9 )
texture_hover = ExtResource( 10 )

[connection signal="pressed" from="AudioBar/IncreaseBtn" to="." method="increase_audio"]
[connection signal="pressed" from="AudioBar/DecreaseBtn" to="." method="decrease_audio"]
[connection signal="pressed" from="MusicBar/IncreaseBtn" to="." method="increase_music"]
[connection signal="pressed" from="MusicBar/DecreaseBtn" to="." method="decrease_music"]
[connection signal="pressed" from="QuitBtn" to="." method="exit"]
